# artifact_lab

./: .gitignore  COMPREHENSIVE_REFACTORING_PLAN.md  MISSION_ACCOMPLISHED.md  README.md  ade_studio_app.py  backup_strategy.md  license.txt  package-lock.json  package.json  requirements.lock.txt  requirements.txt  run.bat  run.ps1  run.sh  test_connections.js  test_llm_integration.md  test_new_architecture.ps1  test_system.bat  test_webchat_service.py
ADE/: ADE.md  AVA.md  (+13 more)
research/models/adamprotocol/AVA-prototype/: ADVANCED_GOVERNANCE_FEATURES.md  BLOCKCHAIN_DEPLOYMENT_PLAN.md  Cargo.toml  DEPLOYMENT_PLAN.md  DEPLOYMENT_STATUS.md  PRODUCTION_UPGRADE_PLAN.md  README.md  ava-manager.ps1  docker-compose-fixed.yml  docker-compose-light-updated.yml  docker-compose.light.yml  docker-compose.yml  requirements.txt  test_ava_system.ps1
system/BlackNet/snappkit/: Cargo.toml
system/BlackNet/snappkit/examples/: hello_black.rs
system/BlackNet/snappkit/resolver/: name_service.rs
xLab/quantum-engine/: ARCHITECRURE.md  Cargo.toml  README.md  development.md  go.mod  package.json  requirements.txt
xLab/quantum-engine/ai/embeddings/: quantum_db.py
xLab/quantum-engine/ai/langchain/: chains.py
xLab/quantum-engine/automation/scheduling/: jobs.yaml
xLab/quantum-engine/core/abstraction/: engine_router.rs
xLab/quantum-engine/core/backends/: braket_client.py  cirq.py  qiskit.py  qutip.py  rust_native.rs  solidity_qasm_bridge.sol
xLab/quantum-engine/core/interfaces/: graphql.rs  grpc.go  rest.py
xLab/quantum-engine/modules/condensed_matter/: index.py
xLab/quantum-engine/modules/quantum_chemistry/: index.py
xLab/quantum-engine/modules/quantum_cryptography/: index.py
xLab/quantum-engine/modules/quantum_gravity/: index.py
(+485 files in other folders)
