[package]
name = "quantum-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add your Rust dependencies here
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-graphql = "4.0"
tonic = "0.6"
# Add other dependencies as needed

[lib]
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3